# SCP-firmware

./: .gitignore  CMakeLists.txt  Makefile.cmake  change_log.md  maintainers.md  readme.md  requirements.txt  security.md  security_scp_firmware_pub_key.txt  user_guide.md
.gitlab/: .gitlab-ci.yml
.gitlab/pipelines/: daily-pipeline.yml  deployment-pipeline.yml
.gitlab/templates/: beetle-security-test.yml  blackduck_scanner.yml  build-test.yml  linting.yml  merge-report.yml  platform-test.yml  scmi-test.yml  setup-workspace.yml  static-analysis.yml  status-report.yml  test-count.yml  unit-test.yml
arch/: CMakeLists.txt
arch/none/posix/: Architecture.cmake  CMakeLists.txt
arch/none/posix/include/: arch_interrupt.h
arch/none/posix/src/: arch_interrupt.c  arch_main.c
cmake/Toolchain/: ArmClang-Baremetal.cmake  Clang-Baremetal.cmake  Clang-Base.cmake  GNU-Baremetal.cmake
debugger/include/: cli_fifo.h
doc/: CMakeLists.txt  Doxyfile  aarch64.md  architecture_support.md  build_configurations.md  build_system.md  cmake_readme.md  code_style.md  framework.md
docker/: Dockerfile
docker/installer-scripts/: install-gcc-arm-none-eabi.sh  install-gcc-arm-none-linux-gnueabihf.sh  install-lcov.sh  install-llvm.sh
framework/: CMakeLists.txt
framework/include/: fwk_arch.h  fwk_attributes.h  fwk_interrupt.h  fwk_io.h  fwk_log.h  fwk_macros.h  fwk_mmio.h  fwk_module.h  fwk_string.h  fwk_trace.h
framework/src/: fwk_arch.c  fwk_core.c  fwk_interrupt.c  fwk_io.c  fwk_log.c  fwk_module.c
framework/test/: CMakeLists.txt  fwk_test.c  interrupt_functions.c  test_fwk_core.c  test_fwk_interrupt.c  test_fwk_io.c  test_fwk_macros.c
interface/power_management/: interface_power_management.h
module/: CMakeLists.txt
module/amu_smcf_drv/: CMakeLists.txt
module/integration_test/: CMakeLists.txt  Module.cmake
module/integration_test/doc/: integration_test.md
module/integration_test/include/: mod_integration_test.h  unity_config.h
module/integration_test/src/: mod_integration_test.c
module/mock_sensor/: CMakeLists.txt  Module.cmake
module/mock_telemetry_source/: CMakeLists.txt  Module.cmake
module/mpmm/: CMakeLists.txt
module/mpmm_v2/: CMakeLists.txt
module/ni_710ae/: CMakeLists.txt  Module.cmake
module/ni_710ae/doc/: ni710ae.md
module/ni_710ae/include/: mod_ni_710ae.h
module/ni_710ae/include/internal/: ni_710ae_apu_drv.h  ni_710ae_apu_reg.h  ni_710ae_discovery_drv.h  ni_710ae_discovery_reg.h  ni_710ae_drv.h  ni_710ae_lib.h
module/ni_710ae/src/: mod_ni_710ae.c  ni_710ae_apu_drv.c  ni_710ae_discovery_drv.c  ni_710ae_lib.c
module/ni_710ae/test/: CMakeLists.txt  config_ni_710ae.h  fwk_module_idx.h  mod_ni_710ae_unit_test.c
module/ni_710ae/test/mocks/: Mockni_710ae_discovery_drv.c  Mockni_710ae_discovery_drv.h  Mockni_710ae_lib.c  Mockni_710ae_lib.h
module/pinctrl/: CMakeLists.txt  Module.cmake
module/pinctrl_drv/: CMakeLists.txt  Module.cmake
module/posix_mqueue/: CMakeLists.txt  Module.cmake
module/posix_transport/: CMakeLists.txt  Module.cmake
module/power_capping/: CMakeLists.txt
module/power_distributor/: CMakeLists.txt  Module.cmake
module/scmi_pin_control/: CMakeLists.txt
module/scmi_power_capping/: CMakeLists.txt
module/scmi_power_capping_req/: CMakeLists.txt  Module.cmake
module/scmi_telemetry/: CMakeLists.txt  Module.cmake
module/system_coordinator/: CMakeLists.txt  Module.cmake
product/automotive-rd/rdaspen/si0_ramfw/: Buildoptions.cmake  CMakeLists.txt  Firmware.cmake  Toolchain-Clang.cmake  Toolchain-GNU.cmake  config_apcontext.c  config_armv8r_mpu.c  config_clock.c  config_cluster_control.c  config_cmn_cyprus.c  config_debugger_cli.c  config_fmu.c  config_gicx00.c  config_gtimer.c  config_integration_test.c  config_mhu3.c  config_ni_710ae.c  config_pfdi_monitor.c  config_pl011.c  config_power_domain.c  config_ppu_v1.c  config_sbistc.c  config_scmi.c  config_scmi_pfdi_monitor.c  config_scmi_power_domain.c  config_scmi_system_power.c  config_sds.c  config_si0_platform.c  config_sid.c  config_ssu.c  config_system_info.c  config_system_pll.c  config_system_power.c  config_timer.c  config_transport.c
product/automotive-rd/rdaspen/si0_ramfw/include/: cmn_node_id.h  fmw_gic.h  fmw_io.h  fmw_log.h  fmw_memory.h  fmw_notification.h  platform_core.h  si0_cfgd_mhu3.h  si0_cfgd_pfdi_monitor.h  si0_cfgd_power_domain.h  si0_cfgd_scmi.h  si0_cfgd_sds.h  si0_cfgd_ssu.h  si0_cfgd_timer.h  si0_cfgd_transport.h  si0_clock.h  si0_exp_mmap.h  si0_irq.h  si0_mmap.h  si0_ros_clock.h
product/fvp-baser-aemv8r/fw/: CMakeLists.txt  Firmware.cmake  config_armv8r_mpu.c  config_debugger_cli.c  config_gtimer.c  config_integration_test.c  config_sp805.c  config_test_timer.c  config_timer.c  fvp_baser_aemv8r_mmap.h  fvp_baser_cfgd_timer.h  fvp_baser_irq.h
product/optee/: sub.mk
product/optee/stm32mp2/fw/: CMakeLists.txt  Firmware.cmake  Toolchain-GNU.cmake  config_scmi.c
product/posix-host/fw/: CMakeLists.txt  Firmware.cmake  config_posix_mqueue.c  config_posix_transport.c  config_scmi.c  config_stdio.c  config_stdio.h  fmw_io.h
product/qemu_virt_m7/fw/: CMakeLists.txt  Firmware.cmake  Toolchain-ArmClang.cmake  Toolchain-Clang.cmake  Toolchain-GNU.cmake  config_clock.c  config_cmn_cyprus.c  config_gtimer.c  config_pl011.c  config_qemu_sysinfo.c  config_scmi.c  config_sp805.c  config_stdio.c  config_system.c  config_system_info.c  config_timer.c  config_transport.c  fmw_cmsis.h  fmw_io.h  fmw_log.h  fmw_memory.h
product/qemu_virt_m7/module/qemu_bridge/: CMakeLists.txt  Module.cmake
product/qemu_virt_m7/module/qemu_bridge/include/: mod_qemu_bridge.h
product/qemu_virt_m7/module/qemu_bridge/src/: mod_qemu_bridge.c
product/qemu_virt_m7/module/qemu_sysinfo/: CMakeLists.txt  Module.cmake
product/qemu_virt_m7/module/qemu_sysinfo/include/: mod_qemu_sysinfo.h
product/qemu_virt_m7/module/qemu_sysinfo/src/: mod_qemu_sysinfo.c
tools/: check_api.py  check_commit_msg.py  check_copyright.py  check_spacing.py  check_style.py  check_tabs.py  ci.py  cppcheck_wrapper.py  pipeline_notification.py  product.py
unit_test/: CMakeLists.txt  user_guide.md
(+590 files in other folders)
