#
# Arm SCP/MCP Software
# Copyright (c) 2025, Arm Limited and Contributors. All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause
#

add_executable(rdaspen-si0-bl2)

target_include_directories(rdaspen-si0-bl2 PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}"
    "${CMAKE_CURRENT_SOURCE_DIR}/include")

target_sources(rdaspen-si0-bl2 PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/config_armv8r_mpu.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_cluster_control.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_cmn_cyprus.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_gicx00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_mhu3.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_si0_platform.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_sid.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_system_info.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_pl011.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_power_domain.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_ppu_v1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_transport.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_system_pll.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_clock.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_ros_clock.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_gtimer.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_timer.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_sds.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_apcontext.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_scmi.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_scmi_power_domain.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_scmi_system_power.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/config_system_power.c"
    )
